--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<section></section>
 	<article></article>
 test
+test
 <!--External scripts files-->
 <script src="main.js"></script>
 <!--Local scripts-->
