--- a/index.html
+++ b/index.html
@@ -12,77 +12,62 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="">
 	-->
-	<link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com"> 
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<header class="header">
 		<div class="container">
 			<div class="header_inner">
-				<div class="logo">JD</div>
+				<img src="images/Logo/JD_Logo.svg" alt="Эмблема JD" class="header_logo">
 				<nav class="navigation">
-					<a href="#">Work</a>
-					<a href="#">About</a>
-					<a href="#">Contact</a>
-					<a href="#">CurrentTime</a>
+					<a class="nav_link" href="#">Work</a>
+					<a class="nav_link" href="#">About</a>
+					<a class="nav_link" href="#">Contact</a>
 				</nav>
 			</div>
 		</div>
 	</header>
-	<section></section>
+	<section>
 		<div class="intro">
 			<div class="container">
 				<div class="intro_inner">
-					<h1 class="intro_title">JD</h1>
-					<h2 class="intro_subtitle">Creative designer</h2>
-					<div class="intro_info">Hello, I am JD, designer, based in Georgia.</div>
-					<div>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains</div>
-				</div>
-			</div>
-		</div>
-		<div class="workingsteps">
-			<div class="container">
-				<div class="workingsteps_intro">
-					<div>Block 1</div>
-					<div>AnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotation</div>
-					<div>Block 2</div>
-					<div>AnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotation</div>
-					<div>Block 3</div>
-					<div>AnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotation</div>
-					<div>Block 4</div>
-					<div>AnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotationAnnotation</div>
+					<div class="intro_maininfo">
+						<div class="intro_title">
+							Creative designer & developer
+						</div>
+					</div>
+					<div class="intro_secondinfo">
+						Hello, I am JD, designer, based in Georgia. My passion - UI/UX design and Front End Development. Welcome and Enjoy!
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="exploring">
 			<div class="container">
-				<div class="exploring_intro">
-					Block 1
+				<div class="all_projects">
+					<div>
+						See my works
+					</div>
+					<img src="images/Icons/arrowRight_icon.png" alt="Изображение стрелки" class="arrow_icon">
 				</div>
 			</div>
 		</div>
 		<div class="Connections">
 			<div class="container">
 				<div class="connections_inner">
-					<h3>Get in touch</h3>
-					<div>Feel free to mail me for any information</div>
-					<form>
-						
-					</form>
-					<!--<div class="mailto">
-
-					</div> -->
 					<div class="socialmedia">
-						<a href="#">Behance</a>
-						<a href="#">Dribbble</a>
-						<a href="#">Instagram</a>
-						<a href="#">Linkedin</a>
+						<a class="social_link" href="#">Behance</a>
+						<a class="social_link" href="#">Dribbble</a>
+						<a class="social_link" href="#">Instagram</a>
+						<a class="social_link" href="#">Linkedin</a>
 					</div>
 				</div>
 			</div>
 		</div>
+	</section>
 <!--External scripts files-->
 <script src="main.js"></script>
 <!--Local scripts-->
